--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,9 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!-- ng-crodova -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
@@ -22,6 +25,11 @@
     <script src="apps/app.js"></script>
     <script src="apps/config.js"></script>
     <script src="apps/routers.js"></script>
+
+    <!-- core -->
+    <script src="apps/core/module.js"></script>
+    <script src="apps/core/localstorage.service.js"></script>
+    <script src="apps/core/auth.services.js"></script>
 
     <!-- home -->
     <script src="apps/home/module.js"></script>
