--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,8 @@
 
     <!-- ng-crodova -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-
+    <!-- angular-http-auth -->
+    <script src="lib/angular-http-auth/src/http-auth-interceptor.js" ></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
